modified:   index.html 	new file:   recipes/breakfast-burrito.html 	modified:   recipes/sushi.html

--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Sushi</h1>
-    <img src="../images/Sushi.jpeg">
+    <img src="../images/Sushi.jpeg" height="250" width="300">
 
     <p><h2>Description</h2></p>
     <p>Easy and simple to make sushi rolls. This low cost recipe salmon sushi 
