--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-   <li><a href="recipes/sushi.html">Sushi</a></li>
+        <li><a href="recipes/sushi.html" target="_blank" rel="noopener noreferrer">Sushi</a></li>
+        <li><a href="recipes/shrimp-tacos.html" target="_blank" rel="noopener noreferrer">Shrimp Tacos</a></li>
+        <li><a href="recipes/breakfast-burrito.html" target="_blank" rel="noopener noreferrer">Breakfast Burrito</a></li>
     </ul>
 </body>
 </html>
