modified:   recipes/breakfast-burrito.html 	modified:   recipes/shrimp-tacos.html

--- a/recipes/breakfast-burrito.html
+++ b/recipes/breakfast-burrito.html
@@ -10,29 +10,33 @@
     <img src="../images/breakfast-burrito.jpeg" height="250" width="300">
 
     <h2>Description</h2>
-    <p>Amazing and flavorful shrimp tacos ready to be made right at home. Shrimp seasoned with the perfect amount of spice and zestiness, along with sour cream and lime will have you eating more than you should.
-   This easy to make recipe will be having you make these delicious tacos daily. </p>
+    <p>This delicous breakfast burrito with eggs and bacon will have you craving these during dinner. The additonal rich flavors will have you loving these more than any other breakfast burrito you've ever had. </p>
 
    <h3>Ingredients</h3>
    <ul>
-    <li>20 Tortillas</li>
-    <li>3 pounds of shrimp</li>
-    <li>6 tbsp olive oil</li>
-    <li>2 tbsp chili powder</li>
-    <li>1 tsp mayonnaise</li>
-    <li>1/2 red cabbage chopped</li>
-    <li>3 tsp white vinegar</li>
-    <li>1 bunch of clinatro chopped</li>
-    <li>2 bunches scallions chopped</li>
+    <li>1 flour tortilla</li>
+    <li>3 eggs</li>
+    <li>2 slices of bacon</li>
+    <li>1/2 an avocado</li>
+    <li>1 potato</li>
+    <li>1/2 cup shredded chheddar cheese</li>
+    <li>Salt and pepper</li>
+    <li>Garlic and Onion powder</li>
+    <li>Paprika</li>
+
    </ul>
 
    <h3>Steps</h3>
    <ol>
-    <li>Mix lime juice, 3 tbsp of olive oil, mayonnaise, and shrimp together in a bowl. Alow this to marinade for an hour</li>
-    <li>Mix cabbage, scallions, 3 tbsp olive oil, vinegar, and cilantro in a bowl to prepare a slaw.</li>
-    <li>Heat torillas about 20 secs per side over a frying pan at medium heat</li>
-    <li>Prepare grill by heating up on medium head, lighly oiling the surface</li>
-    <li>Remove the shrim from the marinade and grill till opaque. Add shrim to each tortilla and top with the slaw.</li>
+    <li>Cube potato and season with salt,pepper, onion powder, garlic powder, and paprika all to taste. </li>
+    <li>Grill the potato cubes in an oiled pan until golden</li>
+    <li>On a separate pan cook the bacon strips till crispy</li>
+    <li>Using the bacon grease, scramble the eggs and cook in the same pan containing the bacon grease.</li>
+    <li>Chop the cooked bacon into fine pieces</li>
+    <li>Slide the half of avocado into even strips</li>
+    <li>Grill the flour tortilla on a large pan till warm</li>
+    <li>On the warm tortilla, place the cooked eggs, then the avocado, potatoes, bacon and top with cheese</li>
+    <li>Finally, roll the tortilla into a burrito and enjoy!</li>
    </ol>
 </body>
 </html>
