modified:   recipes/shrimp-tacos.html

--- a/recipes/shrimp-tacos.html
+++ b/recipes/shrimp-tacos.html
@@ -32,7 +32,7 @@
     <li>Mix cabbage, scallions, 3 tbsp olive oil, vinegar, and cilantro in a bowl to prepare a slaw.</li>
     <li>Heat torillas about 20 secs per side over a frying pan at medium heat</li>
     <li>Prepare grill by heating up on medium head, lighly oiling the surface</li>
-    <li>Remove the shrim from the marinade and grill till opaque. Add shrim to each tortilla and top with the slaw.</li>
+    <li>Remove the shrimp from the marinade and grill till opaque. Add shrim to each tortilla and top with the slaw.</li>
    </ol>
 </body>
 </html>
